fixed js collapse/expand on faq questions by adjusting the event listener

--- a/styles.css
+++ b/styles.css
@@ -898,11 +898,15 @@ FAQ
 }
 
 .faq__item--answer{
-  display: none;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: all 300ms ease;
 }
 
 .faq__item.active .faq__item--answer {
-  display: block;
+  max-height: 80px;
+  opacity: 1;
   margin-top: 16px;
   line-height: 1.625;
 }
